Creating the Software structure

--- a/Shader_Compiler/Shader_Compiler/Shader_Compiler.vcxproj.filters
+++ b/Shader_Compiler/Shader_Compiler/Shader_Compiler.vcxproj.filters
@@ -36,6 +36,12 @@
     <ClCompile Include="..\External\ImGui\imgui_impl_opengl2.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Panels.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
+    <ClCompile Include="App.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\External\ImGui\imconfig.h">
@@ -60,6 +66,12 @@
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
     <ClInclude Include="..\External\ImGui\imgui_impl_opengl2.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Panels.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="App.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
   </ItemGroup>
