--- a/Shader_Compiler/Shader_Compiler/Shader_Compiler.vcxproj
+++ b/Shader_Compiler/Shader_Compiler/Shader_Compiler.vcxproj
@@ -138,6 +138,7 @@
     <ClCompile Include="..\External\ImGui\imgui_impl_glfw.cpp" />
     <ClCompile Include="..\External\ImGui\imgui_impl_opengl2.cpp" />
     <ClCompile Include="..\External\ImGui\imgui_widgets.cpp" />
+    <ClCompile Include="App.cpp" />
     <ClCompile Include="Source\Application.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -149,6 +150,7 @@
     <ClInclude Include="..\External\ImGui\imstb_rectpack.h" />
     <ClInclude Include="..\External\ImGui\imstb_textedit.h" />
     <ClInclude Include="..\External\ImGui\imstb_truetype.h" />
+    <ClInclude Include="App.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
